--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer. In my free time I enjoy
                 <a href="http://www.cracoviafoilfencing.com/">foil fencing</a>,
                 <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>,
-                <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, among creating things: I'm an
+                <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, and I love building things: I'm an
                 amateur
                 <a href="//cloud.mehvix.com">server admin</a>, gourmet
                 <a href="/static/media/home/for-fun.png">mycologist</a>,
@@ -194,20 +194,40 @@
             <ul>
                 <li>
                     <a href="posts">Blog</a> -- <a href="posts/rss.xml">RSS Feed</a>
-                    <ul class="sub-posts">
+                    <ul>
                         <!-- todo automate this -->
-                        <li>
-                            22-08-30 ::
-                            <a href="posts/counter.html" id="count">Probabilistic Counter</a>
-                        </li>
-                        <li>
-                            22-08-13 ::
-                            <a href="posts/balls.html" id="balls">It's all Balls</a>
-                        </li>
-                        <li>
-                            22-02-13 ::
-                            <a href="posts/feedback.html" id="feedback">Feedback</a>
-                        </li>
+                        <table id="blogs">
+                            <tr>
+                                <td class="posts">22-08-30</td>
+                                <td>
+                                    <a href="posts/counting.html" id="counter">Probabilistic Counter</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="posts">22-08-18</td>
+                                <td>
+                                    <a href="posts/balls.html" id="balls">It's all Balls</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="posts">22-02-13</td>
+                                <td>
+                                    <a href="posts/feedback.html" id="feedback">Feedback</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="posts">22-02-04</td>
+                                <td>
+                                    <a href="posts/colemak.html" id="colemak-experience">The Colemak Experience</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="posts">21-12-09</td>
+                                <td>
+                                    <a href="posts/pass.html" id="pass">Killing pass.mehvix.com</a>
+                                </td>
+                            </tr>
+                        </table>
                     </ul>
                 </li>
                 <li>
@@ -217,7 +237,9 @@
                 <!-- <li>
                         <a href="/serverservices">Server</a>
                     </li>-->
-                <span>---</span>
+            </ul>
+            <h2>Subdomain</h2>
+            <ul>
                 <li>
                     <a href="//toolbox.mehvix.com">Toolbox</a>
                     <ul class="sub-posts">
@@ -271,6 +293,17 @@
             </ul>
         </div>
 
+        <div>
+            <h1>Web Ring</h1>
+            <ol>
+                <li>
+                    <a href="https://www.afmoriarty.com/">Aidan</a>
+                </li>
+                <li>
+                    <a href="https://martreb.github.io/">Bert</a>
+                </li>
+            </ol>
+        </div>
         <div id="footer">
             <table id="footerTable">
                 <tr>
