--- a/index.html
+++ b/index.html
@@ -55,27 +55,31 @@
         <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
         <div>
             <p>
-                Hello! My name is Max Vogel, but <i>Mehvix</i> is my
-                username for most things on the web — I'm sure you can
-                figure out what it means. I was born in 2002 and grew up around Madison, Wisconsin. Here is a
-                <a onclick="toggleImage(me)">photo of me</a><img class="expander" onclick="toggleImage(me)" />
-                <img alt="Me!" id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" />
+                Hello! My name is Max Vogel, but <i>Mehvix</i> is my username for most things on the web — I'm sure you can
+                figure out what it means. I was born in 2002 and grew up around the <a
+                    href="https://en.wikipedia.org/wiki/Middleton,_Wisconsin">great dairyland</a>. Here is a <a
+                    onclick="toggleImage(me)">picture of my dad and me</a><img class="expander" onclick="toggleImage(me)" />
                 in 2007 from Google Maps.
             </p>
+            <img id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" />
             <p>
                 Right now I'm a second-year at
                 <a href="//www.berkeley.edu/">Berkeley</a> majoring in
-                <a href="//eecseecs.com/">EECS</a> and working at
-                <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer. In my free time I enjoy
+                <a href="//eecseecs.com/">EECS</a>. I'm currently working at
+                <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer and as a research assistant under <a
+                    href="http://people.eecs.berkeley.edu/~sequin">Carlo Séquin</a> where I'm working on <a
+                    href="https://jipcad.github.io/">JIPCAD</a>: a CAD
+                program for modeling mathematical objects. Generally, I am passionate about protecting digital privacy and
+                freedoms. In my free time I enjoy
                 <a href="http://www.cracoviafoilfencing.com/">foil fencing</a>,
                 <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>,
-                <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, and I love building things: I'm an
-                amateur
-                <a href="//cloud.mehvix.com">server admin</a>, gourmet
-                <a href="/static/media/home/for-fun.png">mycologist</a>,
-                3D-printing cybernaut, and
-                <a href="/static/media/home/20210816-001132.png">pyrotechnic</a>
-                (in that order, least to most amateur). I am passionate about protecting digital privacy and freedoms.
+                <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, among creating things: I'm an
+                amateur <a href="//cloud.mehvix.com">server admin</a>, gourmet <a
+                    href="/static/media/home/for-fun.png">mycologist</a>,
+                3D-printing cybernaut, and <a href="/static/media/home/20210816-001132.png">pyrotechnic</a>
+                (in that order, least to most amateur).
+            </p>
+            <p>
                 Fun fact:
                 <script>
                     document.write(attr_selected)
@@ -154,6 +158,9 @@
                 </li>
                 <li>
                     Judge my <a href="//stackoverflow.com/users/7833617/">Stack Overflow</a> answers.
+                </li>
+                <li>
+                    See the power of Colemak-DH on <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a>.
                 </li>
                 <li>
                     Jam out to my
@@ -288,22 +295,14 @@
                     <a href="//mse.mehvix.com">MSE</a>
                 </li>
                 <li>
+                    <a href="//cs194.mehvix.com">CS194</a>
+                </li>
+                <li>
                     <a href="//aops-rss.mehvix.com">AoPS RSS Generator</a>
                 </li>
             </ul>
         </div>
 
-        <div>
-            <h1>Web Ring</h1>
-            <ol>
-                <li>
-                    <a href="https://www.afmoriarty.com/">Aidan</a>
-                </li>
-                <li>
-                    <a href="https://martreb.github.io/">Bert</a>
-                </li>
-            </ol>
-        </div>
         <div id="footer">
             <table id="footerTable">
                 <tr>
