--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 figure out what it means. I was born in 2002 and grew up around the <a
                     href="https://en.wikipedia.org/wiki/Middleton,_Wisconsin">great dairyland</a>. Here is a <a
                     onclick="toggleImage(me)">picture of my dad and me</a><img class="expander" onclick="toggleImage(me)" />
-                in 2007 from Google Maps.
+                from Google Maps circa 2007.
             </p>
             <img id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" />
             <p>
@@ -68,7 +68,7 @@
                 <a href="//eecseecs.com/">EECS</a>. I'm currently working at
                 <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer and as a research assistant under <a
                     href="http://people.eecs.berkeley.edu/~sequin">Carlo Séquin</a> where I'm working on <a
-                    href="https://jipcad.github.io/">JIPCAD</a>: a CAD
+                    href="https://jipcad.github.io/">JIPCAD</a>: a 
                 program for modeling mathematical objects. Generally, I am passionate about protecting digital privacy and
                 freedoms. In my free time I enjoy
                 <a href="http://www.cracoviafoilfencing.com/">foil fencing</a>,
