--- a/quotes.html
+++ b/quotes.html
@@ -50,6 +50,28 @@
         <div class="main">
             <article>
                 <div>
+                    <blockquote>
+                        Tony- John just asked me specifically.
+                        <br>
+                        Christopher- So it's like the movie then.
+                        <br>
+                        Tony- What movie?
+                        <br>
+                        Christopher- One. That you can't refuse a man's request on his daughter's wedding day.
+                        <br>
+                        Tony- No, it's the other way around. That I should be asking him for something he can't refuse.
+                        <br>
+                        Christopher- So did you?
+                        <br>
+                        Tony- No.
+                        <br>
+                        Christopher- You should ask not to do this.
+                    </blockquote>
+                    <p>
+                        Sopranos S6E5
+                    </p>
+                </div>
+                <div>
                     <b></b>
                     <blockquote>
                         If it's worth going somewhere, it's worth going there fast.
@@ -175,12 +197,14 @@
                         chief technology officer, said an employee had
                         emailed Mr. Hofstadter for ideas for a rebrand.
                         <br />
+                        <br />
                         In an email, Mr. Hofstadter said he had originally
                         suggested “teammate” to describe Meta's employees,
                         since each half of the word is an anagram of Meta.
                         In a postscript, he recommended Metamate as an
                         alternative. He added that he was unaware the
                         company had adopted the name.
+                        <br />
                         <br />
                         “By the way, I don't use Facebook and never have,”
                         he wrote. “In fact, I avoid all social media. That's
@@ -195,13 +219,21 @@
                     <b>Escapism</b>
                     <blockquote>
                         We are all alone, born alone, die alone, and—in
+                        <br>
                         spite of True Romance magazines—we shall all someday
+                        <br>
                         look back on our lives and see that, in spite of our
+                        <br>
                         company, we were alone the whole way. I do not say
+                        <br>
                         lonely—at least, not all the time—but essentially,
+                        <br>
                         and finally, alone. This is what makes your
+                        <br>
                         self-respect so important, and I don't see how you
+                        <br>
                         can respect yourself if you must look in the hearts
+                        <br>
                         and minds of others for your happiness.
                     </blockquote>
                     <p>
@@ -562,7 +594,7 @@
                         And nobody answers, cause somethin' ain't right
                     </blockquote>
                     <p>
-                        <a href="//www.youtube.com/watch?v=Mui4CM2SKWM">Ween</a>
+                        <a href="//www.youtube.com/watch?v=Mui4CM2SKWM">ween</a>
                     </p>
                 </div>
 
