--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
         <div>
             <p>
-                Hello! My name is Max Vogel, but <i>Mehvix</i> is my username for most things on the web — I'm sure you can
+                Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most
+                things on the web — I'm sure you can
                 figure out what it means. I was born in 2002 and grew up around the <a
                     href="https://en.wikipedia.org/wiki/Middleton,_Wisconsin">great dairyland</a>. Here is a <a
                     onclick="toggleImage(me)">picture of my dad and me</a><img class="expander" onclick="toggleImage(me)" />
@@ -66,18 +67,16 @@
                 Right now I'm a second-year at
                 <a href="//www.berkeley.edu/">Berkeley</a> majoring in
                 <a href="//eecseecs.com/">EECS</a>. I'm currently working at
-                <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer and as a research assistant under <a
-                    href="http://people.eecs.berkeley.edu/~sequin">Carlo Séquin</a> where I'm working on <a
-                    href="https://jipcad.github.io/">JIPCAD</a>: a 
-                program for modeling mathematical objects. Generally, I am passionate about protecting digital privacy and
-                freedoms. In my free time I enjoy
+                <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer as well as under <a
+                    href="http://people.eecs.berkeley.edu/~sequin">Carlo Séquin</a> where I'm building on <a
+                    href="https://jipcad.github.io/">JIPCAD</a>: a program for modeling mathematical objects. Generally, I am
+                passionate about promoting and protecting digital privacy and freedoms. In my free time I enjoy
                 <a href="http://www.cracoviafoilfencing.com/">foil fencing</a>,
                 <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>,
                 <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, among creating things: I'm an
-                amateur <a href="//cloud.mehvix.com">server admin</a>, gourmet <a
-                    href="/static/media/home/for-fun.png">mycologist</a>,
-                3D-printing cybernaut, and <a href="/static/media/home/20210816-001132.png">pyrotechnic</a>
-                (in that order, least to most amateur).
+                amateur <a href="//cloud.mehvix.com">server admin</a>, <a href="/static/media/home/for-fun.png">gourmet</a>
+                mycologist, 3D-printing cybernaut, and <a href="/static/media/home/20210816-001132.png">pyrotechnic</a> (in
+                that order, least to most amateur).
             </p>
             <p>
                 Fun fact:
