--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
         <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
         <div>
             <p>
-                Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most
-                things on the web — I'm sure you can
-                figure out what it means. I was born in 2002 and grew up around the <a
+                Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — I'm
+                sure you can figure out what it means. I was born in 2002 and grew up around the <a
                     href="https://en.wikipedia.org/wiki/Middleton,_Wisconsin">great dairyland</a>. Here is a <a
                     onclick="toggleImage(me)">picture of my dad and me</a><img class="expander" onclick="toggleImage(me)" />
                 from Google Maps circa 2007.
@@ -204,6 +203,12 @@
                         <!-- todo automate this -->
                         <table id="blogs">
                             <tr>
+                                <td class="posts">22-11-27</td>
+                                <td>
+                                    <a href="stick.html" id="stick">Driving Stick and Design</a>
+                                </td>
+                            </tr>
+                            <tr>
                                 <td class="posts">22-08-30</td>
                                 <td>
                                     <a href="posts/counting.html" id="counter">Probabilistic Counter</a>
@@ -213,24 +218,6 @@
                                 <td class="posts">22-08-18</td>
                                 <td>
                                     <a href="posts/balls.html" id="balls">It's all Balls</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="posts">22-02-13</td>
-                                <td>
-                                    <a href="posts/feedback.html" id="feedback">Feedback</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="posts">22-02-04</td>
-                                <td>
-                                    <a href="posts/colemak.html" id="colemak-experience">The Colemak Experience</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="posts">21-12-09</td>
-                                <td>
-                                    <a href="posts/pass.html" id="pass">Killing pass.mehvix.com</a>
                                 </td>
                             </tr>
                         </table>
@@ -246,7 +233,7 @@
             </ul>
             <h2>Subdomain</h2>
             <ul>
-                <li>
+                <li id="toolbox-li">
                     <a href="//toolbox.mehvix.com">Toolbox</a>
                     <ul class="sub-posts">
                         <li id="resistor">
