--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <td>Discord</td>
                         <td>
                             <span class="select-all">Mehvix#7966</span>
-                            <wbr />(<a href="//stallman.org/discord.html">if possible, don't use!</a>)
+                            <wbr />(<a href="//mhvx.us/discord1">consider</a> <a href="//mhvx.us/discord2">not</a> <a href="//mhvx.us/discord3">participating</a>!)
                         </td>
                     </tr>
                     <!-- I do not actively used session. -->
