--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
     <body>
         <div class="box">
             <div class="nav">
-                <a href="/">~</a>/<a href="" class="inverse-bg">404</a>
+                <a href="/">~</a>/<a href="">404</a>
             </div>
 
             <p>
@@ -56,28 +56,28 @@
 
             <div style="display: block; text-align: center">
                 <pre style="display: inline-block; line-height: 1.25">
-            *     ,MMM8&&&.            *      
-                <a href="//mehvix.com">Return Home.</a>    .            
-                NMMMM88&&&&&&&                
-    *          MMMM88&&&&&&&&                
+            *     ,MMM8&&&.            *
+                <a href="//mehvix.com">Return Home.</a>    .
+                NMMMM88&&&&&&&
+    *          MMMM88&&&&&&&&
 <a href="#" onClick="history.go(-1); return false;">Last Location.</a>
-                ‘MMM88&&&&&&’                
-                 ‘MMM8&&&’      *           
-                        
-        |\___/|     /\___/\                 
+                ‘MMM88&&&&&&’
+                 ‘MMM8&&&’      *
+
+        |\___/|     /\___/\
         )     (     )    ~( .              ‘
-       =\     /=   =\~    /=                
-         )===(       ) ~ (                  
-        /     \     /     \                 
-        |     |     ) ~   (                 
-       /       \   /     ~ \                
-       \       /   \~     ~/                
-_/\_/\_/\__  _/_/\_/\__~__/_/\_/\_/\_/\_/\_ 
-|  |  |  |) )! |  |  (( |  |  |  |  |  |  | 
-|  |  |  ( ( ! |  |  |\\|  |  |  |  |  |  | 
-|  |  |  |)_)  |  |  |))|  |  |  |  |  |  | 
-|  |  |  |  |  |  |  |\)|  |  |  |  |  |  | 
-|  |  |  |  |  |  |  |  |  |  |  |  |  |  | 
+       =\     /=   =\~    /=
+         )===(       ) ~ (
+        /     \     /     \
+        |     |     ) ~   (
+       /       \   /     ~ \
+       \       /   \~     ~/
+_/\_/\_/\__  _/_/\_/\__~__/_/\_/\_/\_/\_/\_
+|  |  |  |) )! |  |  (( |  |  |  |  |  |  |
+|  |  |  ( ( ! |  |  |\\|  |  |  |  |  |  |
+|  |  |  |)_)  |  |  |))|  |  |  |  |  |  |
+|  |  |  |  |  |  |  |\)|  |  |  |  |  |  |
+|  |  |  |  |  |  |  |  |  |  |  |  |  |  |
                 </pre>
             </div>
             <div id="footer">
