--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <body>
     <div class="box">
-        <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
+        <div class="nav"><a href="">~</a>/</div>
         <div>
             <p>
                 Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — I'm
@@ -122,7 +122,8 @@
                         <td>Discord</td>
                         <td>
                             <span class="select-all">Mehvix#7966</span>
-                            <wbr />(<a href="//mhvx.us/discord1">consider</a> <a href="//mhvx.us/discord2">not</a> <a href="//mhvx.us/discord3">participating</a>!)
+                            <wbr />(<a href="//mhvx.us/discord1">consider</a> <a href="//mhvx.us/discord2">not</a> <a
+                                href="//mhvx.us/discord3">participating</a>!)
                         </td>
                     </tr>
                     <!-- I do not actively used session. -->
@@ -201,23 +202,24 @@
                     <a href="posts">Blog</a> -- <a href="posts/rss.xml">RSS Feed</a>
                     <ul>
                         <!-- todo automate this -->
+                        <!-- ! until, make sure to append 'posts/' to href -->
                         <table id="blogs">
+                            <tr>
+                                <td class="posts">23-02-11</td>
+                                <td>
+                                    <a href="posts/exists.html" id="exists">Painting Balls</a>
+                                </td>
+                            </tr>
                             <tr>
                                 <td class="posts">22-11-27</td>
                                 <td>
-                                    <a href="stick.html" id="stick">Driving Stick and Design</a>
+                                    <a href="posts/stick.html" id="stick">Driving Stick and Design</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td class="posts">22-08-30</td>
                                 <td>
                                     <a href="posts/counting.html" id="counter">Probabilistic Counter</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="posts">22-08-18</td>
-                                <td>
-                                    <a href="posts/balls.html" id="balls">It's all Balls</a>
                                 </td>
                             </tr>
                         </table>
