--- a/keys.html
+++ b/keys.html
@@ -58,7 +58,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Keys</a>
+            <a href="./index.html">~</a>/<a href="">Keys</a>
         </div>
 
         <h1>Matrix</h1>
