--- a/quotes.html
+++ b/quotes.html
@@ -22,10 +22,24 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Quotes</a>
+            <a href="./index.html">~</a>/<a href="">Quotes</a>
         </div>
         <div class="main">
             <article>
+                <div>
+                    <blockquote>
+                        Just on the border of your waking mind
+                        There lies another time
+                        Where darkness and light are one
+                        And as you tread the halls of sanity
+                        You feel so glad to be
+                        Unable to go beyond
+                        I have a message from another time..
+                    </blockquote>
+                    <p>
+                        <a href="https://www.youtube.com/watch?v=CJRmR4yc0zw">Time</a>
+                    </p>
+                </div>
                 <div>
                     <blockquote>
                         Let me start off with a basket of chips
