--- a/serverservices.html
+++ b/serverservices.html
@@ -46,7 +46,7 @@
     <body>
         <div class="box">
             <div class="nav">
-                <a href="./index.html">~</a>/<a href="" class="inverse-bg"
+                <a href="./index.html">~</a>/<a href=""
                     >Server</a
                 >
             </div>
