--- a/todo.html
+++ b/todo.html
@@ -69,7 +69,7 @@
     <body>
         <div class="box">
             <div class="nav">
-                <a href="./index.html">~</a>/<a href="" class="inverse-bg"
+                <a href="./index.html">~</a>/<a href=""
                     >#TODO</a
                 >
             </div>
