--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
                         <!-- ! until, make sure to append 'posts/' to href -->
                         <table id="blogs">
                             <tr>
+                                <td class="posts">23-08-27</td>
+                                <td>
+                                    <a href="posts/orthodoxy.html" id="orthodoxy">Privacy, Orthodoxy</a>
+                                </td>
+                            </tr>
+                            <tr>
                                 <td class="posts">23-02-11</td>
                                 <td>
                                     <a href="posts/exists.html" id="exists">Painting Balls</a>
@@ -214,12 +220,6 @@
                                 <td class="posts">22-11-27</td>
                                 <td>
                                     <a href="posts/stick.html" id="stick">Driving Stick and Design</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="posts">22-08-30</td>
-                                <td>
-                                    <a href="posts/counting.html" id="counter">Probabilistic Counter</a>
                                 </td>
                             </tr>
                         </table>
