--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         :root {
             --outside-bg-color: #920909;
         }
+
     </style>
 
     <link href="/static/css/post-color.css" type="text/css" rel="stylesheet" />
@@ -55,10 +56,12 @@
         <div class="nav"><a href="">~</a>/</div>
         <div>
             <p>
-                Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — I'm
+                Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web —
+                I'm
                 sure you can figure out what it means. I was born in 2002 and grew up around the <a
                     href="https://en.wikipedia.org/wiki/Middleton,_Wisconsin">great dairyland</a>. Here is a <a
-                    onclick="toggleImage(me)">picture of my dad and me</a><img class="expander" onclick="toggleImage(me)" />
+                    onclick="toggleImage(me)">picture of my dad and me</a><img class="expander"
+                    onclick="toggleImage(me)" />
                 from Google Maps circa 2007.
             </p>
             <img id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" />
@@ -68,13 +71,16 @@
                 <a href="//eecseecs.com/">EECS</a>. I'm currently working at
                 <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer as well as under <a
                     href="http://people.eecs.berkeley.edu/~sequin">Carlo Séquin</a> where I'm building on <a
-                    href="https://jipcad.github.io/">JIPCAD</a>: a program for modeling mathematical objects. Generally, I am
+                    href="https://jipcad.github.io/">JIPCAD</a>: a program for modeling mathematical objects. Generally,
+                I am
                 passionate about promoting and protecting digital privacy and freedoms. In my free time I enjoy
                 <a href="http://www.cracoviafoilfencing.com/">foil fencing</a>,
                 <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>,
                 <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, among creating things: I'm an
-                amateur <a href="//cloud.mehvix.com">server admin</a>, <a href="/static/media/home/for-fun.png">gourmet</a>
-                mycologist, 3D-printing cybernaut, and <a href="/static/media/home/20210816-001132.png">pyrotechnic</a> (in
+                amateur <a href="//cloud.mehvix.com">server admin</a>, <a
+                    href="/static/media/home/for-fun.png">gourmet</a>
+                mycologist, 3D-printing cybernaut, and <a href="/static/media/home/20210816-001132.png">pyrotechnic</a>
+                (in
                 that order, least to most amateur).
             </p>
             <p>
@@ -91,11 +97,13 @@
         <div>
             <h1>Contact</h1>
             <p>
-                I enjoy meeting interesting people. If you're around Berkeley / the bay area and want to grab coffee (or go
+                I enjoy meeting interesting people. If you're around Berkeley / the bay area and want to grab coffee (or
+                go
                 <a href="/static/media/home/steam-tunnel.jpeg">steam tunneling</a>) sometime, reach out!
             </p>
             <p>
-                I am a <a href="https://signal.org/">Signal</a> fanatic —— I use it to reach everyone from my roommates to my
+                I am a <a href="https://signal.org/">Signal</a> fanatic —— I use it to reach everyone from my roommates
+                to my
                 grandparents. If you don't have my number, shoot me an email with yours.
             </p>
             <div>
@@ -205,7 +213,7 @@
                         <!-- ! until, make sure to append 'posts/' to href -->
                         <table id="blogs">
                             <tr>
-                                <td class="posts">23-08-27</td>
+                                <td class="posts">23-12-27</td>
                                 <td>
                                     <a href="posts/orthodoxy.html" id="orthodoxy">Privacy, Orthodoxy</a>
                                 </td>
