--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                         <td>Discord</td>
                         <td>
                             <span class="select-all">Mehvix#7966</span>
-                            <wbr />(<a href="//mhvx.us/discord1">consider</a> <a href="//mhvx.us/discord2">not</a> <a
-                                href="//mhvx.us/discord3">participating</a>!)
+                            <wbr />(<a href="//mhvx.cc/discord1">consider</a> <a href="//mhvx.cc/discord2">not</a> <a
+                                href="//mhvx.cc/discord3">participating</a>!)
                         </td>
                     </tr>
                     <!-- I do not actively used session. -->
@@ -164,7 +164,8 @@
                     <a href="//scratch.mit.edu/users/maxninja/">Scratch</a>.
                 </li>
                 <li>
-                    Judge my <a href="//stackoverflow.com/users/7833617/">Stack Overflow</a> answers.
+                    See what I've contributed to LLM models: my <a href="//stackoverflow.com/users/7833617/">Stack
+                        Overflow</a> answers.
                 </li>
                 <li>
                     See the power of Colemak-DH on <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a>.
@@ -212,6 +213,12 @@
                         <!-- todo automate this -->
                         <!-- ! until, make sure to append 'posts/' to href -->
                         <table id="blogs">
+                            <tr>
+                                <td class="posts">24-04-27</td>
+                                <td>
+                                    <a href="posts/us.html" id="us">mhvx.us is dead!</a>
+                                </td>
+                            </tr>
                             <tr>
                                 <td class="posts">23-12-27</td>
                                 <td>
